--- a/ghostwriter.github.css
+++ b/ghostwriter.github.css
@@ -71,7 +71,7 @@ h1 a {
   width: 50px;
   height: 50px;
   margin: 60px 15px 0 15px;
-  background: rgba(0,0,0,.95);
+  background: #000;
   border-radius: 25px;
 }
 
